--- a/style.css
+++ b/style.css
@@ -1,16 +1,31 @@
 .nav{
     display:flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    justify-content: space-between;
+    color:aliceblue;
+    background-color:greenyellow;
 }
 .list1{
     list-style: none;
     display:flex;
+    flex-direction: row;
+    gap:1%;
+    font-size: 1em;
 }
 .nav2{
     display:flex;
     flex-wrap: nowrap;
+    margin-left: 10%;
+    
 
+}
+.list2{
+    display: flex;
+    gap: 10%;
+}
+.nav3{
+    display: flex;
+    gap:20%;
 }
 .list2{
     list-style: none;
@@ -19,33 +34,148 @@
 .body1{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    width: 50%;
+    width: 90%;
+    gap:20%;
+    margin-left: 20%;
+    margin-top: 10%;
 }
 .image1{
-
+width:200% ;
 }
 .body2{
     display:flex;
-    justify-content: space-between;
-    width:50%;
     flex-direction: row;
     flex-wrap: nowrap;
+    gap: 20%;
+    margin-top: 5%;
+    margin-left: 10%;
 }
+
 .first{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    width: 50%;
+    
 }
 .innerbody{
     display: flex;
-    flex-direction: column;
-    align-content: center;
-    width:  50%;
+    gap:2%;
 }
 .innerbody1{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: center;
-    width: 50%;
+    gap:30%;
+    margin-left: 20%;
+    margin-top:10%;
+}
+.innerbody2{
+    display: flex;
+    margin-right: 20%;
+    gap:20%;
+    margin-top: 5%;
+}
+.im1{
+    margin-right: 5%;
+}
+.words{
+    display: flex;
+    gap:5%;
+    margin-left: 20%;
+    margin-top: 10%;;
+}
+.wrd1{
+    margin-top: 3%;
+}
+.body3{
+    display:flex;
+    gap:10%;
+    margin-top: 5%;
+    margin-left: 10%;
+}
+.body4{
+    display: flex;
+    gap:20%;
+    margin-left: 25%;
+    margin-top: 5%;
+}
+@media screen and (min-width:412px){
+    body{
+       width:100%;
+    }
+    .nav{
+        display:flex;
+        flex-direction: row;
+        font-size: 10%;
+    }
+    .nav2{
+        display:flex;
+        flex-wrap: nowrap;
+        margin-left: 10%;
+        font-size: 10%;
+    
+    }
+    .b{
+        font-size: 10%;
+    }
+    .bb{
+        font-size:30%;
+    }
+    .image1{
+        width:70% ;
+}
+.body2{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 10%;
+    margin-top: 2%;
+    margin-left: 5%;
+}
+.innerbody1{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap:30%;
+    margin-left: 5%;
+    margin-top:5%;
+}
+.image2{
+    width:300% ;
+}
+.innerbody1{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap:10%;
+    margin-left: 20%;
+    margin-top:10%;
+}
+.im1{
+    margin-right: 5%;
+    width: 100%;
+}
+.im3{
+    width:100%;
+}
+p{
+    font-size:80% ;
+}
+.innerbody2{
+    display: flex;
+    flex-wrap: nowrap;
+    margin-right: 20%;
+    gap:1%;
+    margin-top: 5%;
+}
+h2{
+    font-size:80%;
+}
+.image3{
+    width:1000%;
+}
+h1{
+    font-size:80%;
+}
 }
