--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ width:200% ;
     margin-left: 25%;
     margin-top: 5%;
 }
-@media screen and (min-width:412px){
+@media screen and (max-width:412px){
     body{
        width:100%;
     }
@@ -116,10 +116,11 @@ width:200% ;
         font-size: 10%;
     
     }
+}
     .b{
         font-size: 10%;
     }
-    .bb{
+    /*.bb{
         font-size:30%;
     }
     .image1{
