--- a/style.css
+++ b/style.css
@@ -55,19 +55,20 @@ width:200% ;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 50%;
+    width: 30%;
     
 }
 .innerbody{
     display: flex;
+    flex-direction: column;
     gap:2%;
+    flex-direction: column;
 }
 .innerbody1{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     gap:30%;
-    margin-left: 20%;
     margin-top:10%;
 }
 .innerbody2{
@@ -195,7 +196,10 @@ width:200% ;
     height:20%;
 }
 .icons2{
-
+    margin-bottom: 50%;
+}
+body{
+    overflow-x: hidden;
 }
 @media screen and (max-width:412px){
     body{
